# teste-2024

./: README.md  pyproject.toml  requirements.txt
base/: settings.py  urls.py
client/: form_sets.py  forms.py  models.py  tests.py  urls.py  views.py
client/migrations/: 0001_initial.py
client/templates/client/: home.html
client/templates/client/client/: create_update.html  delete.html  list.html
utils/templates/utils/: base.html
vehicle/: forms.py  models.py  validators.py
vehicle/migrations/: 0001_initial.py
